Load .env, add Deepgram options, improve audio/typing
Add support for local .env secrets and update docs/README to instruct copying src/LisperFlow/.env.example. Introduce DotNetEnv and wire LoadEnvIfPresent/ApplySecretOverrides in App.xaml.cs to override API keys from environment/.env.

Update Audio configuration defaults to 48000 Hz, lower VAD threshold and increase pre-roll; add runtime audio normalization in AudioCaptureService. Expand Deepgram settings in AppSettings and appsettings.json and refactor DeepgramStreamProvider to accept DeepgramSettings + sample rate, build a configurable connection URI (model/tier/diarize/fillers/numerals/endpointing/keyterms) and surface transcript confidence.

Improve typing behavior: rework TranscriptSynchronizer to word-based tracking to avoid aggressive corrections, add ProcessFinalTranscript and reset logic; DictationService now uses the final processing path and adds debug logs. Make text injection more robust by attempting to restore focus (AttachThreadInput/SetForegroundWindow) via new Win32 interop APIs before typing.

Other: add .gitignore entry for .env and include a .env.example. Remove embedded API keys from appsettings.json and replace with empty defaults or safer defaults. (Build artifacts and package additions not described here.)

--- a/src/LisperFlow/LisperFlow.csproj
+++ b/src/LisperFlow/LisperFlow.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="FlaUI.Core" Version="5.0.0" />
     <PackageReference Include="FlaUI.UIA3" Version="5.0.0" />
     <PackageReference Include="Hardcodet.NotifyIcon.Wpf" Version="2.0.1" />
@@ -28,6 +29,9 @@
 
   <ItemGroup>
     <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update=".env">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
